# sqlmodel_rust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  PLAN_TO_PORT_SQLMODEL_TO_RUST.md  README.md  SESSION_TODO.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
crates/sqlmodel/: Cargo.toml
crates/sqlmodel-console/: Cargo.toml
crates/sqlmodel-console/benches/: console_bench.rs
crates/sqlmodel-console/src/: console.rs  lib.rs  logging.rs  mode.rs  theme.rs
crates/sqlmodel-console/src/renderables/: error.rs  mod.rs  schema_tree.rs
crates/sqlmodel-console/tests/: agent_compat.rs  fixtures_tests.rs
crates/sqlmodel-console/tests/e2e/: error_display.rs  full_workflow.rs  mod.rs  mode_switching.rs  output_capture.rs  progress_tracking.rs  query_results.rs
crates/sqlmodel-console/tests/fixtures/: golden.rs  sample_data.rs
crates/sqlmodel-core/: Cargo.toml
crates/sqlmodel-core/src/: connection.rs  error.rs  field.rs  lib.rs  model.rs  relationship.rs  row.rs  types.rs  validate.rs  value.rs
crates/sqlmodel-frankensqlite/: Cargo.toml
crates/sqlmodel-frankensqlite/src/: connection.rs  value.rs
crates/sqlmodel-macros/: Cargo.toml
crates/sqlmodel-macros/src/: infer.rs  lib.rs  parse.rs  validate.rs  validate_derive.rs
crates/sqlmodel-mysql/: Cargo.toml  README.md
crates/sqlmodel-mysql/src/: async_connection.rs  auth.rs  config.rs  connection.rs  lib.rs  tls.rs  types.rs
crates/sqlmodel-mysql/src/protocol/: mod.rs  prepared.rs  reader.rs  writer.rs
crates/sqlmodel-mysql/tests/: mysql_integration.rs
crates/sqlmodel-pool/: Cargo.toml
crates/sqlmodel-pool/src/: lib.rs
crates/sqlmodel-postgres/: Cargo.toml
crates/sqlmodel-postgres/src/: async_connection.rs  connection.rs  lib.rs
crates/sqlmodel-postgres/src/auth/: scram.rs
crates/sqlmodel-postgres/src/types/: decode.rs  encode.rs  mod.rs
crates/sqlmodel-query/: Cargo.toml
crates/sqlmodel-query/src/: builder.rs  cache.rs  clause.rs  eager.rs  expr.rs  join.rs  lib.rs  select.rs  set_ops.rs
crates/sqlmodel-schema/: Cargo.toml
crates/sqlmodel-schema/src/: create.rs  diff.rs  expected.rs  introspect.rs  lib.rs  migrate.rs
crates/sqlmodel-schema/src/ddl/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/sqlmodel-session/src/: change_tracker.rs  flush.rs  identity_map.rs  lib.rs  n1_detection.rs  unit_of_work.rs
crates/sqlmodel-sqlite/: Cargo.toml
crates/sqlmodel-sqlite/src/: connection.rs  ffi.rs  lib.rs  types.rs
crates/sqlmodel/src/: global_console.rs  lib.rs  session.rs
crates/sqlmodel/tests/: joined_inheritance_insert_many_sqlite.rs  select_one_semantics_sqlite.rs  sqlite_introspector_check_constraints.rs
