[workspace]
resolver = "2"
members = [
    "crates/sqlmodel",
    "crates/sqlmodel-core",
    "crates/sqlmodel-macros",
    "crates/sqlmodel-query",
    "crates/sqlmodel-schema",
    "crates/sqlmodel-session",
    "crates/sqlmodel-pool",
    "crates/sqlmodel-postgres",
    "crates/sqlmodel-sqlite",
    "crates/sqlmodel-mysql",
    "crates/sqlmodel-console",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["SQLModel Rust Contributors"]
repository = "https://github.com/sqlmodel/sqlmodel-rust"
homepage = "https://github.com/sqlmodel/sqlmodel-rust"
description = "SQL databases in Rust, designed to be intuitive and type-safe"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_const_for_fn = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
elidable_lifetime_names = "allow"
struct_excessive_bools = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
match_same_arms = "allow"
bool_to_int_with_if = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
unused_self = "allow"
needless_continue = "allow"
should_implement_trait = "allow"
redundant_closure_for_method_calls = "allow"
format_push_string = "allow"

[workspace.dependencies]
# Core async runtime - our custom cancel-correct runtime
asupersync = { version = "0.1.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
regex = "1"

# Logging
tracing = "0.1"

# Rich console output (optional, used by sqlmodel-console)
rich_rust = "0.1.1"

# Internal crates
sqlmodel = { path = "crates/sqlmodel" }
sqlmodel-core = { path = "crates/sqlmodel-core" }
sqlmodel-macros = { path = "crates/sqlmodel-macros" }
sqlmodel-query = { path = "crates/sqlmodel-query" }
sqlmodel-schema = { path = "crates/sqlmodel-schema" }
sqlmodel-session = { path = "crates/sqlmodel-session" }
sqlmodel-pool = { path = "crates/sqlmodel-pool" }
sqlmodel-console = { path = "crates/sqlmodel-console" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
