[package]
name = "sqlmodel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and traits for SQLModel Rust"

[lints]
workspace = true

[dependencies]
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tracing.workspace = true
