[package]
name = "sqlmodel-frankensqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "FrankenSQLite (pure-Rust) driver for SQLModel Rust"

[lints]
workspace = true

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
fsqlite = { path = "/dp/frankensqlite/crates/fsqlite" }
fsqlite-core = { path = "/dp/frankensqlite/crates/fsqlite-core" }
fsqlite-types = { path = "/dp/frankensqlite/crates/fsqlite-types" }
fsqlite-error = { path = "/dp/frankensqlite/crates/fsqlite-error" }

[dev-dependencies]
