[package]
name = "sqlmodel-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Procedural macros for SQLModel Rust"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
sqlmodel-core.workspace = true
