[package]
name = "sqlmodel-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "MySQL driver for SQLModel Rust"

[lints]
workspace = true

[features]
default = []
console = ["dep:sqlmodel-console"]

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"

# Optional console support
sqlmodel-console = { path = "../sqlmodel-console", optional = true }

[dev-dependencies]
