[package]
name = "sqlmodel-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Connection pooling for SQLModel Rust using asupersync"

[lints]
workspace = true

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
