[package]
name = "sqlmodel-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "PostgreSQL driver for SQLModel Rust"

[lints]
workspace = true

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
base64 = "0.22"
rand = "0.8"
md5 = "0.7"

[dev-dependencies]
