[package]
name = "sqlmodel-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Type-safe SQL query builder for SQLModel Rust"

[lints]
workspace = true

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
