[package]
name = "sqlmodel-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite driver for SQLModel Rust"

[lints]
workspace = true

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]

[dev-dependencies]
