[package]
name = "sqlmodel-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite driver for SQLModel Rust"

[lints]
workspace = true

[features]
default = []
console = ["dep:sqlmodel-console"]

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true

# Optional console support
sqlmodel-console = { path = "../sqlmodel-console", optional = true }

[build-dependencies]

[dev-dependencies]
