[package]
name = "sqlmodel-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite driver for SQLModel Rust"
homepage.workspace = true
documentation = "https://docs.rs/sqlmodel-sqlite"
readme = "README.md"
keywords = ["sqlite", "sql", "database", "driver", "sqlmodel"]
categories = ["database", "database-implementations"]

[lints]
workspace = true

[features]
default = []
console = ["dep:sqlmodel-console"]

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true

# Optional console support
sqlmodel-console = { workspace = true, optional = true }

# libsqlite3-sys with `bundled` compiles SQLite from the vendored amalgamation
# on every target and emits `cargo:rustc-link-lib=static=sqlite3`. That replaces
# the previous #[link(name = "sqlite3")] dynamic-link attribute in src/ffi.rs,
# which refused to work on musl (no host libsqlite3.so/.a) and would silently
# pick up the host glibc libsqlite3.a on gnu Linux — tripping `__memcpy_chk`
# unresolved symbols under musl's non-FORTIFY libc. Bundling sqlite3 makes the
# build work on musl, Alpine, Windows, macOS, and every gnu Linux without any
# dependency on the host's libsqlite3 package.
libsqlite3-sys = { workspace = true, features = ["bundled"] }

[build-dependencies]

[dev-dependencies]
